2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Fonts): More tests of fonts.  Add 
	section testing glyph commands.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Remove note about updating texi2html tests, 
	and note about building standalone modules for CPAN.  Move
	advice on updating web pages together.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/TestXS.pm: Change version number 
	to "0" as (a) alphabetic characters in the version don't work 
	here, and (b) this saves us having to update the version here.
	* README-hacking: Remove note to update the version number in 
	these two files.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac, tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/TestXS.pm: Bump version to 6.3dev.
	Remove "dist-xz" option for testing.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac, configure.ac
	(PERL_EXT_CC): New variable to override compiler used to build 
	XS extension.

2016-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Customization Variables and Options): Remove 
	index entries for some customization variables with index 
	entries duplicated elsewhere.  These variables are 
	'documentlanguage', 'HEADERS', and 'SHOW_MENU'.
	(Other Customization Variables): Add index entry for 'HEADERS'.

2016-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (indices_information): Do not return
	'merged_indices' hash, as this information is not used anywhere.  
	Callers updated.
	* tp/t/test_utils.pl: Don't use 'merged_indices' hash.

2016-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Report.pm (line_error): Remove 'error continuation' 
	functionality.  Callers updated.  This has few user-visible 